--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,8 +18,7 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:contentScrim="#BD2828"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            >
+            app:layout_scrollFlags="exitUntilCollapsed|scroll">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -32,10 +30,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:scaleType="centerCrop"
+                    android:transitionName="imageView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:transitionName="imageView"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
@@ -50,10 +48,10 @@
                         android:layout_height="wrap_content"
                         android:background="#9b2d30"
                         android:padding="5dp"
-                        android:src="@drawable/calendar_small_svgrepo_com"
+                        android:src="@drawable/calendar"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tvTime"
@@ -66,14 +64,14 @@
                         android:textSize="15sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@id/sivCalendar"
+                        app:layout_constraintEnd_toStartOf="@id/tvCategory"
                         app:layout_constraintStart_toEndOf="@id/sivCalendar"
                         app:layout_constraintTop_toTopOf="@id/sivCalendar"
-                        app:layout_constraintEnd_toStartOf="@id/tvCategory"
                         tools:text="11.01.1111 00:00" />
 
                     <TextView
                         android:id="@+id/tvCategory"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:background="#A8383B"
                         android:gravity="center"
@@ -97,11 +95,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:menu="@menu/menu_toolbar"
-                />
+                app:menu="@menu/menu_toolbar" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -121,10 +119,10 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/webView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/webView"
                 tools:text="Примерный заголовок новости: В Москве дефицит айтишников" />
 
             <com.example.newsaz.ui.details.WebViewClass
@@ -132,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-               app:layout_constraintBottom_toTopOf="@id/line"
+                app:layout_constraintBottom_toTopOf="@id/line"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTitle" />
@@ -141,33 +139,33 @@
                 android:id="@+id/line"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/black"
-                app:layout_constraintTop_toBottomOf="@id/webView"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/webView" />
 
             <TextView
                 android:id="@+id/tvOtherNews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="15dp"
                 android:text="@string/otherNews"
-                app:layout_constraintTop_toBottomOf="@id/line"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tvOtherNews"
                 android:textSize="23sp"
                 android:textStyle="bold"
-                android:padding="15dp"/>
+                app:layout_constraintBottom_toTopOf="@id/tvOtherNews"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/line" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvOtherNews"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/tvOtherNews"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvOtherNews"
                 tools:listitem="@layout/news_item" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
