animation action alpha

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -32,7 +32,8 @@
             android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:hint="@string/search_news"
+            android:queryHint="Search"
+            style="@style/CustomSearchView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btBack"
