--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,13 +23,21 @@
         <action
             android:id="@+id/action_newsFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_newsFragment_self"
+            app:destination="@id/newsFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.example.newsaz.ui.details.DetailsFragment"
         android:label="fragment_details"
-        tools:layout="@layout/fragment_details"/>
+        tools:layout="@layout/fragment_details">
+
+        <argument
+            android:name="news"
+            app:argType="com.example.newsaz.data.model.newsmodel.NewsListModel" />
+    </fragment>
 
     <fragment
         android:id="@+id/searchFragment"
