--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,11 +14,7 @@
 
         <action
             android:id="@+id/action_newsFragment_to_searchFragment"
-            app:destination="@id/searchFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+            app:destination="@id/searchFragment" />
 
         <action
             android:id="@+id/action_newsFragment_to_detailsFragment"
@@ -26,6 +22,7 @@
         <action
             android:id="@+id/action_newsFragment_self"
             app:destination="@id/newsFragment" />
+
     </fragment>
 
     <fragment
